# qstrings

./: .gitignore  pyproject.toml
.github/workflows/: pypi-release.yml
qstrings/: Q.py  __init__.py  cli.py  config.py
tests/: test_Q.py  test_prompt1.md
