[project]
name = "qstrings"
version = "0.1.2"
description = "Q-strings: query anything"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3",
    "sqlglot>=27.6.0",
]

[project.scripts]
q = "qstrings.cli:app"

[dependency-groups]
cli = [
    "typer>=0.16.0",
]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
